trabajos inconclusos al avisar de CMD en oportunity research, push del dia

--- a/sigi/app/Resources/views/department/index.html.twig
+++ b/sigi/app/Resources/views/department/index.html.twig
@@ -20,7 +20,9 @@
                 <td>{{ department.name }}</td>
                 <td>{% if department.faculty is not null %}{{ department.faculty.name }}{% endif %}</td>
                 <td><a href="{{ path('department_show', { 'id': department.id }) }}" class="btn btn-info btn-sm" role="button">Ver</a></td>
-                <td><a href="{{ path('department_edit', { 'id': department.id }) }}" class="btn btn-primary btn-sm" role="button">Editar</a></tr>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <td><a href="{{ path('department_edit', { 'id': department.id }) }}" class="btn btn-primary btn-sm" role="button">Editar</a></tr>
+                {% endif %}
         {% endfor %}
         </tbody>
     </table>
