--- a/sigi/app/Resources/views/faculty/index.html.twig
+++ b/sigi/app/Resources/views/faculty/index.html.twig
@@ -28,7 +28,9 @@
                 </td>
                 <td>
                     <a href="{{ path('faculty_show', { 'id': faculty.id }) }}" class="btn btn-info btn-sm" role="button">Ver</a>
-                    <a href="{{ path('faculty_edit', { 'id': faculty.id }) }}" class="btn btn-primary btn-sm" role="button">Editar</a>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <a href="{{ path('faculty_edit', { 'id': faculty.id }) }}" class="btn btn-primary btn-sm" role="button">Editar</a>
+                    {% endif %}
                 </td>
             </tr>
         {% endfor %}
