--- a/sigi/app/Resources/views/department/edit.html.twig
+++ b/sigi/app/Resources/views/department/edit.html.twig
@@ -15,9 +15,12 @@
     {{ form_end(edit_form) }}
 
     <a href="{{ path('department_index') }}" class="btn btn-info btn2" role="button" >Departamentos</a>
-    {{ form_start(delete_form) }}
-        <input type="submit" value="Eliminar" class="btn btn-danger btn3" role="button">
-    {{ form_end(delete_form) }}
+
+    {% if is_granted('ROLE_ADMIN') %}
+        {{ form_start(delete_form) }}
+            <input type="submit" value="Eliminar" class="btn btn-danger btn3" role="button">
+        {{ form_end(delete_form) }}
+    {% endif %}
 
 
 <script type="text/javascript">
