--- a/sigi/app/Resources/views/department/show.html.twig
+++ b/sigi/app/Resources/views/department/show.html.twig
@@ -23,8 +23,11 @@
 
 
     <a href="{{ path('department_index') }}" class="btn btn-info btn1" role="button" >Departamentos</a>
-    <a href="{{ path('department_edit', { 'id': department.id }) }}" class="btn btn-primary btn2" role="button">Editar</a>
-    {{ form_start(delete_form) }}
-        <input type="submit" value="Eliminar" class="btn btn-danger btn2" role="button">
-    {{ form_end(delete_form) }}
+
+    {% if is_granted('ROLE_ADMIN') %}
+        <a href="{{ path('department_edit', { 'id': department.id }) }}" class="btn btn-primary btn2" role="button">Editar</a>
+        {{ form_start(delete_form) }}
+            <input type="submit" value="Eliminar" class="btn btn-danger btn2" role="button">
+        {{ form_end(delete_form) }}
+    {% endif %}
 {% endblock %}
