--- a/sigi/app/Resources/views/faculty/show.html.twig
+++ b/sigi/app/Resources/views/faculty/show.html.twig
@@ -18,9 +18,11 @@
 
         <a href="{{ path('faculty_edit', { 'id': faculty.id }) }}" class="btn btn-primary btn1" role="button" >Editar Facultad</a>
 
-        <a href="{{ path('faculty_index') }}" class="btn btn-info btn1" role="button" >Ver Facultades</a>
+        {% if is_granted('ROLE_ADMIN') %}
+            <a href="{{ path('faculty_index') }}" class="btn btn-info btn1" role="button" >Ver Facultades</a>
 
-        {{ form_start(delete_form) }}
-            <input type="submit" value="Eliminar" class="btn btn-danger btn2" role="button">
-        {{ form_end(delete_form) }}
+            {{ form_start(delete_form) }}
+                <input type="submit" value="Eliminar" class="btn btn-danger btn2" role="button">
+            {{ form_end(delete_form) }}
+        {% endif %}
 {% endblock %}
