--- a/sigi/app/Resources/views/oportunityresearch/new.html.twig
+++ b/sigi/app/Resources/views/oportunityresearch/new.html.twig
@@ -19,86 +19,46 @@
     {{ form_start(form) }}
         {{ form_widget(form) }}
 
-<!--
-			</ul>
-
-	        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-			  <div class="panel panel-default">
-			    <div class="panel-heading" role="tab" id="headingOne">
-			      <h4 class="panel-title">
-			        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-			          Agregar un Segundo Mentor
-			        </a>
-			      </h4>
-			    </div>
-			    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-			      <div class="panel-body">
-			        {{ form_widget(secondaryForm) }}
-
-			        *Aunque cierre esta pestaña, si escogio un mentor sera agregado, si no quiere agregar uno, dejelo en blanco
-
-			      </div>
-			    </div>
-			  </div>
-			  <div class="panel panel-default">
-			    <div class="panel-heading" role="tab" id="headingTwo">
-			      <h4 class="panel-title">
-			        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-			          Agregar un Tercer Mentor 
-			        </a>
-			      </h4>
-			    </div>
-			    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-			      <div class="panel-body">
-			      	{{ form_widget(thertiaryForm) }}
-			        *Aunque cierre esta pestaña, si escogio un mentor sera agregado, si no quiere agregar uno, dejelo en blanco
-			      </div>
-			    </div>
-			  </div>
-			</div>
--->
-
-
         <input type="submit" class="btn btn-primary btn1" role="button" value="Crear" />
     {{ form_end(form) }}
 
  
     <a href="{{ path('oportunityresearch_index') }}" class="btn btn-info btn2" role="button">Lista de Oportunidades</a>
 
-    <!-- Modal -->
-<div class="modal fade" id="ableCMDModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Cursos CMD</h4>
-      </div>
-      <div class="modal-body">
-        	Al tener almenos dos mentores de diferente facultad, esta oportunidad califica para ser CMD, puede seleccionar la opcion en el checkbox correspondiente
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Gracias</button>
-      </div>
-    </div>
-  </div>
-</div>
+    <!-- CMD Modals -->
+	<div class="modal fade" id="ableCMDModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title" id="myModalLabel">Cursos CMD</h4>
+	      </div>
+	      <div class="modal-body">
+	        	Al tener almenos dos mentores de diferente facultad, esta oportunidad califica para ser CMD, puede seleccionar la opcion en el checkbox correspondiente
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Gracias</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
 
-<div class="modal fade" id="disableCMDModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Cursos CMD</h4>
-      </div>
-      <div class="modal-body">
-        	Ya no cumple con requisitos para ser CMD, para poder volver a habilitar la opcion debe tener almenos dos mentores de diferente facultad
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Gracias</button>
-      </div>
-    </div>
-  </div>
-</div>
+	<div class="modal fade" id="disableCMDModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title" id="myModalLabel">Cursos CMD</h4>
+	      </div>
+	      <div class="modal-body">
+	        	Ya no cumple con requisitos para ser CMD, para poder volver a habilitar la opcion debe tener almenos dos mentores de diferente facultad
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Gracias</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
 
 <script type="text/javascript">
 
