agregue creditos a la oportunidad e investigacion, igual con mentor principal o responsable

--- a/sigi/app/Resources/views/oportunityresearch/edit.html.twig
+++ b/sigi/app/Resources/views/oportunityresearch/edit.html.twig
@@ -141,6 +141,7 @@ window.onload = function() {
 		$("#oportunity_research_thertiaryMentor").select2();
 		setWidth();
 		checkCMD();
+		setSelectResponsibleChoices();
 	});
 
 	$('#oportunity_research_thertiaryMentor').on('change', function() {
@@ -150,9 +151,36 @@ window.onload = function() {
 		$("#oportunity_research_secondaryMentor").select2();
 		setWidth();
 		checkCMD();
+		setSelectResponsibleChoices();
 	});
 
 };
+
+function setSelectResponsibleChoices()
+{
+	//mostramos todas las opciones y luego escogemos cual esconder
+	$("#oportunity_research_responsibleMentor option").show();
+
+	//vemos si hay secondario
+	if(document.getElementById("oportunity_research_secondaryMentor").value > 0 )
+		$("#oportunity_research_responsibleMentor option[value=2]").text($("#oportunity_research_secondaryMentor option:selected").text());		
+	else
+	{
+		$("#oportunity_research_responsibleMentor option[value=2]").hide();
+		if(document.getElementById("oportunity_research_responsibleMentor").value == 2)
+			document.getElementById("oportunity_research_responsibleMentor").value = 1;
+	}
+
+	//vemos si hay terciario
+	if(document.getElementById("oportunity_research_thertiaryMentor").value > 0 )
+		$("#oportunity_research_responsibleMentor option[value=3]").text($("#oportunity_research_thertiaryMentor option:selected").text());		
+	else
+	{
+		$("#oportunity_research_responsibleMentor option[value=3]").hide();
+		if(document.getElementById("oportunity_research_responsibleMentor").value == 3)
+			document.getElementById("oportunity_research_responsibleMentor").value = 1;
+	}
+}
 
 function checkCMD()
 {
