--- a/sigi/app/Resources/views/research/new.html.twig
+++ b/sigi/app/Resources/views/research/new.html.twig
@@ -23,7 +23,10 @@
 
 window.onload = function() {
 
-
+    $(".js-basic-single").select2({
+        placeholder: "Seleccione la oportunidad, sugiero no cambiarla",
+        allowClear: false
+    })
 	
 	$.fn.select2.defaults.defaults['language'].inputTooLong = function(){
   		return 'Input demasiado largo.';
@@ -51,6 +54,7 @@ window.onload = function() {
    var x = document.getElementsByClassName("select2-container");
    x[0].style.width = "100%";
    x[1].style.width = "100%";
+   x[2].style.width = "100%";
 
 	$('#secondary_mentor_secondaryMentor').on('change', function() {
 		var ter = document.getElementById("thertiary_mentor_thertiaryMentor");
