--- a/sigi/app/Resources/views/classcode/index.html.twig
+++ b/sigi/app/Resources/views/classcode/index.html.twig
@@ -11,7 +11,7 @@
                 <th>Nombre</th>
                 <th>Mentor Ing</th>
                 <th>Alumno Ing</th>
-                <th>Tipo</th>
+                <th>CMD?</th>
                 <th>Vez</th>
                 <th>Evaluado con</th>
                 <th>Actions</th>
@@ -25,7 +25,7 @@
                 <td>{{ classCode.name }}</td>
                 <td>{% if classCode.mentorIng %}Si{% else %}No{% endif %}</td>
                 <td>{% if classCode.studentIng %}Si{% else %}No{% endif %}</td>
-                <td>{{ classCode.type }}</td>
+                <td>{{ classCode.cmd }}</td>
                 <td>{{ classCode.time }} vez</td>
                 <td>{% if classCode.graded %}Nota de 1 a 7{% else %}Alfanumerico{% endif %}</td>
                 <td>
