--- a/sigi/app/Resources/views/base.html.twig
+++ b/sigi/app/Resources/views/base.html.twig
@@ -131,6 +131,14 @@
                           <li><a href="{{path('user_index')}}">Ver Listado</a></li>
                         </ul>
                       </li>
+
+                      <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Siglas <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                          <li><a href="{{path('class_code_new')}}">Crear Nueva</a></li>
+                          <li><a href="{{path('class_code_index')}}">Ver Listado</a></li>
+                        </ul>
+                      </li>
                     {% endif %}
                   </ul>
 
