--- a/sigi/app/Resources/views/research/show.html.twig
+++ b/sigi/app/Resources/views/research/show.html.twig
@@ -11,7 +11,7 @@
             </tr>
             <tr>
                 <th>Sigla:</th>
-                <td>{{ research.code }}</td>
+                <td>{{ research.initialsCode }}{{ research.numbersCode }}</td>
             </tr>
             <tr>
                 <th>Sección:</th>
