app lista para la presentacion con el decano

--- a/sigi/app/Resources/views/application/new.html.twig
+++ b/sigi/app/Resources/views/application/new.html.twig
@@ -9,5 +9,5 @@
         <input type="submit" class="btn btn-primary btn1"  value="Aplicar" />
     {{ form_end(form) }}
 
-    <a href="{{ path('application_index') }}" class="btn btn-info btn2" role="button" >Ver listado</a>
+    <a href="{{ path('application_index') }}" class="btn btn-danger btn2" role="button" >Cancelar</a>
 {% endblock %}
