--- a/sigi/app/Resources/views/classcode/show.html.twig
+++ b/sigi/app/Resources/views/classcode/show.html.twig
@@ -30,8 +30,8 @@
                 <td>{% if classCode.studentIng %}Si{% else %}No{% endif %}</td>
             </tr>
             <tr>
-                <th>Tipo</th>
-                <td>{{ classCode.type }}</td>
+                <th>CMD</th>
+                <td>{{ classCode.cmd }}</td>
             </tr>
             <tr>
                 <th>Vez que lo toma</th>
